@@ -43,6 +43,7 @@ extern Str Str_form_unquote(Str x);
 extern char *shell_quote(char *str);
 
 extern char *w3m_lib_dir();
+extern char *w3m_etc_dir();
 extern char *w3m_help_dir();
 
 #define New(type)	((type*)GC_MALLOC(sizeof(type)))
