@@ -461,6 +461,7 @@ extern Buffer *load_option_panel(void);
 extern void panel_set_option(struct parsed_tagarg *);
 extern void sync_with_option(void);
 extern char *rcFile(char *base);
+extern char *etcFile(char *base);
 extern char *libFile(char *base);
 extern char *helpFile(char *base);
 extern void setLocalCookie(void);
